add div team and subscribe

--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
                     standaard
                     proeftekst in
                     deze bedrijfstak sinds.</p>
-
             </div>
 
             <div class="content">
@@ -286,6 +285,70 @@
             </div>
         </div>
     </div>
+
+    <div id="team">
+        <div class="section">
+            <div class="top">
+                <h2>Lovely Team Member</h2>
+                <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de
+                    standaard proeftekst in
+                    deze bedrijfstak sinds.</p>
+            </div>
+
+            <div class="bottom">
+                <div class="team">
+                    <img src="./frontend/img/team_1.webp" alt="team_1">
+
+                    <div>
+                        <b>Sathi Bhuiyan</b>
+                        <p>Lovely Designer</p>
+                    </div>
+                </div>
+                <div class="team">
+                    <img src="./frontend/img/team_2.webp" alt="team_2">
+
+                    <div>
+                        <b>Kausar Al Mamun</b>
+                        <p>Lovely Designer</p>
+                    </div>
+                </div>
+                <div class="team">
+                    <img src="./frontend/img/team_3.webp" alt="team_3">
+
+                    <div>
+                        <b>Nirob Khan</b>
+                        <p>Lovely Designer</p>
+                    </div>
+                </div>
+                <div class="team">
+                    <img src="./frontend/img/team_4.webp" alt="team_4">
+
+                    <div>
+                        <b>Salim Rana</b>
+                        <p>Lovely Designer</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="subscribe">
+        <div class="top">
+            <h2>Subscribe A Free Update</h2>
+            <p>Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard
+                proeftekst in
+                deze bedrijfstak sinds.</p>
+        </div>
+
+        <form method="post" class="form_subscribe">
+            <input type="email" name="email_subscribe" class="email_subscribe" placeholder="Enter Your Email">
+
+            <input type="submit" value="SUBSCRIBE" class="submit">
+        </form>
+
+    </div>
+
 
     <div class="scroll_top">&#x25B2;</div>
 </body>
